Simplify and cleanup code